--- a/countries-zyda/src/App.scss
+++ b/countries-zyda/src/App.scss
@@ -1,8 +1,10 @@
+@import 'styles/themes.scss';
+
 html,
 body,
 #root {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding: 0px;
   margin: 0 auto;
   font-family: 'Times New Roman', Times, serif;
@@ -17,7 +19,15 @@ body,
   text-align: center;
   display: flex;
   flex-flow: column;
-  height: 100%;
+  min-height: 100vh;
+  height: auto;
+  color: var(--text) !important;
+  background-color: var(--background-color);
+}
+
+input, button {
+  color: var(--text) !important;
+  background-color: var(--background-color) !important;
 }
 
 .App-logo {
