--- a/countries-zyda/src/components/common/card/Card.scss
+++ b/countries-zyda/src/components/common/card/Card.scss
@@ -1,7 +1,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    box-shadow: 2px 2px 2px 2px #f8f5f5;
+    box-shadow: 1px 1px 15px 0px var(--shadow);
     max-width: 300px;
     max-height: 700px;
     cursor: pointer;
@@ -9,14 +9,12 @@
     &-img {
         width: 100%;
         height: 65%;
+        object-fit: contain;
+        object-position: top;
     }
 
     &-info-section {
         text-align: left;
         padding: 20px 10px;
-
-        span {
-            display: block;
-        }
     }
 }
