--- a/countries-zyda/src/components/header/Header.scss
+++ b/countries-zyda/src/components/header/Header.scss
@@ -2,6 +2,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 40px;
-    box-shadow: 5px 5px 5px 0px #f8f5f5;
+    padding: 10px 40px;
+    box-shadow: 5px 5px 5px 0px var(--shadow);
+
+    &-theme-switch {
+        cursor: pointer;
+    }
+
+    &-theme-logo {
+        width: 25px;
+        height: 25px;
+    }
 }
