fix back btn style

--- a/countries-zyda/src/components/details/Details.scss
+++ b/countries-zyda/src/components/details/Details.scss
@@ -5,6 +5,7 @@
     .back-btn {
         padding: 2px 20px;
         border-color: var(--border-btn);
+        cursor: pointer;
     }
 
     &-content {
